# tuxbox-git-cdk

./: .cvsignore  Makefile.am  acinclude.m4  autogen.sh  backwards_compat.mk  configure.ac  my-flashsetup-cramfs-root.sh  my-flashsetup-jffs2-var.sh  my-flashsetup-jffs2only.sh  newmake.files  oldmake.files  prepare  rules-archive  rules-archive.pl  rules-install  rules-install-flash  rules-make  rules-make-cygwin
Patches/: amule.diff  busybox-flash.config  busybox.config  busybox.config.m4  busybox.diff  busybox17.config  dbox2-flash.c-26.m4  dbox2-flash.c.m4  ftpd.diff  ipkg.diff  jpeg.diff  libid3tag.diff  libmad.diff  libpng.diff  linux-2.4.32-dbox2.config  linux-2.4.32-dbox2.config-flash  linux-2.4.33.3-dbox2.config-flash  linux-2.4.34-dbox2.config-flash  linux-2.4.35.3-dbox2.config-flash  nfs-utils.diff  polipo.diff  portmap.diff  scummvm.diff  sdl.diff
customization/: nukegames  nukelanguages
doc/: BUILD.changes  FAQ.en  INSTALL.de  INSTALL.en  README-flash.barf  README-flash.de  README-flash.en  README-imagekit  README-installflash.en  README.3rdparty.de  README.3rdparty.en
etc/: fstab.in  inetd.conf
etc/init.d/: Makefile.am  rcS.in  start_enigma
make/: automount.mk  backwards_compat.mk  bootstrap.mk  buildenv.mk  busybox.mk  ccache.mk  cleantargets.mk  contrib-apps.mk  contrib-libs.mk  cramfs.urls.mk  development-tools.mk  distribution-lists.mk  dosfstools.mk  dvb-apps.mk  dvb-config.mk  dvbsnoop.mk  enigma.mk  etc.mk  flash-expand-targets.mk  flash-streampes.mk  flashable-dirs.mk  flashroot-enigma.mk  flashroot-fs.mk  flashroot-neutrino.mk  flashroot.mk  ftpd.mk  fullimages.mk  fun.mk  high-level-yadd.mk  hostapps.mk  lcars.mk  lcd.mk  linuxkernel.mk  misc_tools.mk  neutrino.mk  nfsserver.mk  partition-images.mk  phony.mk  plugins.mk  precious.mk  (+12 more)
root/: Makefile.inc
root/etc/: Makefile.am  inetd.conf  profile  services  timezone.xml
root/etc/init.d/: Makefile.am  init1  rcK  rcS  rcS.in  rcS.m4
root/share/tuxbox/: Makefile.am  satellites.xml  terrestrial.xml
root/share/udhcpc/: Makefile.am  default.script
root/var_init/etc/: Makefile.am
root/var_init/tuxbox/config/enigma/: Makefile.am  config
